add: adaptive style form feedback and write-review

--- a/article-inside.html
+++ b/article-inside.html
@@ -573,10 +573,12 @@
           <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
           <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
           <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
+          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения" name="" id="" cols="30" rows="10"></textarea></label>
           <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha"></div>
+          <div class="feedback__captcha">
+            <img src="./common/images/Капча.png" alt="">
+          </div>
           <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
       </form>
       </div>
