--- a/index.html
+++ b/index.html
@@ -590,6 +590,26 @@
         </div>
        </div>
     </section>
+    <div class="write-review">
+      <div class="write-review__container">
+      <div class="write-review__content">
+      <h1 class="write-review__title">Написать отзыв</h1>
+      <form class="write-review__form" action="">
+          <label class="write-review__name" for="write-review-name">Ваше имя<input id="write-review-name" placeholder="Введите имя" type="text"></label>
+          <label class="write-review__phone" for="write-review-phone">Телефон<input id="write-review-phone" placeholder="+7(" type="tel"></label>
+          <label class="write-review__email" for="write-review-email">E-mail<input id="write-review-email" placeholder="Введите e-mail" type="email"></label>
+          <label class="write-review__text" for="write-review-text"><textarea id="write-review-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
+          <span class="write-review__politic">Нажимая кнопку отправить, вы соглашаетесь
+              с политикой обработки <a class="write-review__link" href="">персональных данных</a></span>
+          <div class="write-review__captcha">
+            <img src="./common/images/Капча.png" alt="">
+          </div>
+          <button class="write-review__btn-submit main-btn">ОТПРАВИТЬ</button>
+      </form>
+      </div>
+      <button class="write-review__btn-close">&#9587;</button>
+  </div>
+  </div>
     <section class="reviews">
       <div class="container-main">
         <div class="reviews__top">
@@ -868,10 +888,12 @@
           <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
           <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
           <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
+          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения" name="" id="" cols="30" rows="10"></textarea></label>
           <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha"></div>
+          <div class="feedback__captcha">
+            <img src="./common/images/Капча.png" alt="">
+          </div>
           <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
       </form>
       </div>
@@ -882,6 +904,7 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/reviews-all.js"></script>
 </body>
 
 </html>
