fix: slider work and style

--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
             </div>
           </div>
           <div class="swiper-button-prev banner__slider-btn"></div>
+          <div class="swiper-button-next banner__slider-btn"></div>
           <div class="swiper-pagination"></div>
         </div>
     </div>
@@ -463,8 +464,8 @@
               <p class="features__name">Склад в г. Москве</p>
             </div>
           </div>
-          <div class="swiper-button-next features__btn"></div>
-          <div class="swiper-button-prev features__btn"></div>
+          <div class="swiper-button-next features__btn-next"></div>
+          <div class="swiper-button-prev features__btn-prev"></div>
         </div>
       </div>
     </section>
