refactor: add dr tag name on features block

--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
             </div>
             <div class="swiper-slide features__block">
               <img id="auto" src="./common/svg/Delivery.svg" alt="">
-              <p class="features__name">Быстрая поставка</p>
+              <p class="features__name">Быстрая<br> поставка</p>
             </div>
             <div class="swiper-slide features__block">
               <img id="location" src="./common/svg/Stock.svg" alt="">
-              <p class="features__name">Склад в г. Москве</p>
+              <p class="features__name">Склад в<br> г. Москве</p>
             </div>
           </div>
           <div class="swiper-button-next features__btn-next"></div>
