refactor:added the current version of the project. Added a link to the brands page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>
               <div class="nav-modal__main-nav-2">
                 <a class="" href="#">Направления</a>
-                <a class="" href="#">Бренды</a>
+                <a class="" href="./brands-all.html">Бренды</a>
               </div>
               <div class="nav-modal__main-nav-3">
                 <a class="" href="#">О компании</a>
@@ -289,7 +289,7 @@
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">Бренды</a>
+              <a href="./brands-all.html" class="site-nav__link">Бренды</a>
             </div>
             <span></span>
             <div class="site-nav__item">
