feat:Added a product basket component

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               </a>
             </button>
             <button type="button" class="icon-btn">
-              <a href="./404.html">
+              <a href="./shoping_cart.html">
                 <img src="./common/svg/Cart.svg" alt="">
               </a>
             </button>
