add: amount products

--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -261,6 +261,7 @@
                             </a>
                         </button>
                         <button type="button" class="icon-btn">
+                            <div class="icon-amount">3</div>
                             <a href="./404.html">
                                 <img src="./common/svg/Cart.svg" alt="">
                             </a>
