--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
               </div>
               <div class="nav-modal__main-nav-3">
                 <a class="" href="#">О компании</a>
-                <a class="" href="#">Контакты</a>
+                <a class="" href="./contacts">контакты</a>
               </div>
             </div>
             <div class="nav-modal__catalog">
@@ -127,7 +127,7 @@
               <div class="nav-modal__main-nav-2">
                 <a class="" href="#">Бренды</a>
                 <a class="" href="#">О компании</a>
-                <a class="" href="#">Контакты</a>
+                <a class="" href="./contacts">контакты</a>
               </div>
             </div>
             <div class="accordion-wrapper">
@@ -342,7 +342,6 @@
                 </div>
                 </div>
         </main>
-    </div>
         <footer class="footer">
           <div class="container-main footer__container">
             <div class="footer__top">
@@ -355,7 +354,7 @@
                 <div class="footer__menu-wrap-right">
                   <a class="footer__link" href="#">Бренды</a>
                   <a class="footer__link" href="#">О компании</a>
-                  <a class="footer__link" href="#">Контакты</a>
+                  <a class="footer__link" href="./contacts">контакты</a>
                 </div>
               </div>
               <ul class="footer__catalog">
@@ -446,6 +445,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <script src="https://unpkg.com/feather-icons"></script>
     <script type="module" src="./scripts/reviews-all.js"></script>
