--- a/catalog-main.html
+++ b/catalog-main.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="nav-modal__main-nav-3">
                                 <a class="" href="#">О компании</a>
-                                <a class="" href="./contacts">контакты</a>
+                                <a class="" href="./contacts">Контакты</a>
                             </div>
                         </div>
                         <div class="nav-modal__catalog">
@@ -128,7 +128,7 @@
                             <div class="nav-modal__main-nav-2">
                                 <a class="" href="#">Бренды</a>
                                 <a class="" href="#">О компании</a>
-                                <a class="" href="./contacts">контакты</a>
+                                <a class="" href="./contacts">Контакты</a>
                             </div>
                         </div>
                         <div class="accordion-wrapper">
@@ -856,7 +856,7 @@
                         <div class="footer__menu-wrap-right">
                             <a class="footer__link" href="#">Бренды</a>
                             <a class="footer__link" href="#">О компании</a>
-                            <a class="footer__link" href="./contacts">контакты</a>
+                            <a class="footer__link" href="./contacts">Контакты</a>
                         </div>
                     </div>
                     <ul class="footer__catalog">
