--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="" href="./brands-all.html">Бренды</a>
               </div>
               <div class="nav-modal__main-nav-3">
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about.html">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -129,7 +129,7 @@
               </div>
               <div class="nav-modal__main-nav-2">
                 <a class="" href="#">Бренды</a>
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about.html">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -293,7 +293,7 @@
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">О компании</a>
+              <a href="./about.html" class="site-nav__link">О компании</a>
             </div>
             <span></span>
             <div class="site-nav__item">
@@ -810,7 +810,7 @@
             </div>
             <div class="footer__menu-wrap-right">
               <a class="footer__link" href="#">Бренды</a>
-              <a class="footer__link" href="#">О компании</a>
+              <a class="footer__link" href="./about.html">О компании</a>
               <a class="footer__link" href="./contacts">Контакты</a>
             </div>
           </div>
