refactor: add link contacts pages;

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">Контакты</a>
+              <a href="./contacts.html" class="site-nav__link">Контакты</a>
             </div>
           </div>
         </nav>
