refactor:Changed the margins on the mobile version on the contacts page

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
               </a>
             </button>
             <button type="button" class="icon-btn">
+              <div class="icon-amount">3</div>
               <a href="./shoping_cart.html">
                 <img src="./common/svg/Cart.svg" alt="">
               </a>
