--- a/about.html
+++ b/about.html
@@ -255,7 +255,8 @@
                 </a>
               </button>
               <button type="button" class="icon-btn">
-                <a href="./404.html">
+                <div class="icon-amount">3</div>
+                <a href="./shoping_cart.html">
                   <img src="./common/svg/Cart.svg" alt="">
                 </a>
               </button>
@@ -285,15 +286,15 @@
               </div>
               <span></span>
               <div class="site-nav__item">
-                <a href="./404.html" class="site-nav__link">Бренды</a>
+                <a href="./brands-all.html" class="site-nav__link">Бренды</a>
               </div>
               <span></span>
               <div class="site-nav__item">
-                <a href="./404.html" class="site-nav__link">О компании</a>
+                <a href="./about.html" class="site-nav__link">О компании</a>
               </div>
               <span></span>
               <div class="site-nav__item">
-                <a href="./contacts" class="site-nav__link">Контакты</a>
+                <a href="./contacts.html" class="site-nav__link">Контакты</a>
               </div>
             </div>
           </nav>
