--- a/card-products.html
+++ b/card-products.html
@@ -257,7 +257,8 @@
               </a>
             </button>
             <button type="button" class="icon-btn">
-              <a href="./404.html">
+              <div class="icon-amount">3</div>
+              <a href="./shoping_cart.html">
                 <img src="./common/svg/Cart.svg" alt="">
               </a>
             </button>
@@ -267,6 +268,7 @@
       <hr class="header__line">
       </hr>
       <div class="container">
+
         <nav class="header__nav">
           <button type="button" class="burger nav__burger">
             <span></span>
@@ -286,15 +288,15 @@
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">Бренды</a>
+              <a href="./brands-all.html" class="site-nav__link">Бренды</a>
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">О компании</a>
+              <a href="./about.html" class="site-nav__link">О компании</a>
             </div>
             <span></span>
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link">Контакты</a>
+              <a href="./contacts.html" class="site-nav__link">Контакты</a>
             </div>
           </div>
         </nav>
