--- a/catalog-main.html
+++ b/catalog-main.html
@@ -217,92 +217,94 @@
     <div class="wrapper">
         <header class="header">
             <div class="container">
-                <div class="header__top">
-                    <div class="logo">
-                        <button type="button" class="burger header__burger">
-                            <span></span>
-                        </button>
-                        <a href="./index.html">
-                            <img src="./common/svg/logo.svg" alt="logo-company" class="logo__icon" />
-                        </a>
-                    </div>
-                    <button class="main-btn header__dropdown-btn">
-                        <span>КАТАЛОГ</span>
-                        <i id="icon" class="header__dropdown-icon-down" stroke="#fff" data-feather="chevron-down"></i>
-                        <i id="icon" class="header__dropdown-icon-up" stroke="#fff" data-feather="chevron-up"></i>
-                    </button>
-                    <div class="search header__search">
-                        <i id="icon" class="search__icon" data-feather="search"></i>
-                        <input type="search" placeholder="Введите товар для поиска" class="search__input" />
-                    </div>
-                    <address class="tel header__tel">
-                        <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
-                    </address>
-                    <div class="header__icons-buttons">
-                        <button type="button" class="icon-btn header__seacrh-btn">
-                            <a href="./404.html">
-                                <img src="./common/svg/Search.svg" alt="">
-                            </a>
-                        </button>
-                        <button type="button" class="icon-btn header__map-btn">
-                            <a href="./404.html">
-                                <img src="./common/svg/Location.svg" alt="">
-                            </a>
-                        </button>
-                        <button type="button" class="icon-btn header__heart-btn">
-                            <a href="./favorites-products.html">
-                                <img src="./common/svg/Heart.svg" alt="">
-                            </a>
-                        </button>
-                        <button type="button" class="icon-btn">
-                            <a href="./user-account.html">
-                                <img src="./common/svg/User.svg" alt="">
-                            </a>
-                        </button>
-                        <button type="button" class="icon-btn">
-                            <a href="./404.html">
-                                <img src="./common/svg/Cart.svg" alt="">
-                            </a>
-                        </button>
-                    </div>
+              <div class="header__top">
+                <div class="logo">
+                  <button type="button" class="burger header__burger">
+                    <span></span>
+                  </button>
+                  <a href="./index.html">
+                    <img src="./common/svg/logo.svg" alt="logo-company" class="logo__icon" />
+                  </a>
                 </div>
+                <button class="main-btn header__dropdown-btn">
+                  <span>КАТАЛОГ</span>
+                  <i id="icon" class="header__dropdown-icon-down" stroke="#fff" data-feather="chevron-down"></i>
+                  <i id="icon" class="header__dropdown-icon-up" stroke="#fff" data-feather="chevron-up"></i>
+                </button>
+                <div class="search header__search">
+                  <i id="icon" class="search__icon" data-feather="search"></i>
+                  <input type="search" placeholder="Введите товар для поиска" class="search__input" />
+                </div>
+                <address class="tel header__tel">
+                  <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
+                </address>
+                <div class="header__icons-buttons">
+                  <button type="button" class="icon-btn header__seacrh-btn">
+                    <a href="./404.html">
+                      <img src="./common/svg/Search.svg" alt="">
+                    </a>
+                  </button>
+                  <button type="button" class="icon-btn header__map-btn">
+                    <a href="./404.html">
+                      <img src="./common/svg/Location.svg" alt="">
+                    </a>
+                  </button>
+                  <button type="button" class="icon-btn header__heart-btn">
+                    <a href="./favorites-products.html">
+                      <img src="./common/svg/Heart.svg" alt="">
+                    </a>
+                  </button>
+                  <button type="button" class="icon-btn">
+                    <a href="./user-account.html">
+                      <img src="./common/svg/User.svg" alt="">
+                    </a>
+                  </button>
+                  <button type="button" class="icon-btn">
+                    <div class="icon-amount">3</div>
+                    <a href="./shoping_cart.html">
+                      <img src="./common/svg/Cart.svg" alt="">
+                    </a>
+                  </button>
+                </div>
+              </div>
             </div>
             <hr class="header__line">
             </hr>
             <div class="container">
-                <nav class="header__nav">
-                    <button type="button" class="burger nav__burger">
-                        <span></span>
-                    </button>
-                    <div class="site-nav">
-                        <img src="./common/svg/sale.svg" alt="sale" class="site-nav__icon-sale" />
-                        <div class="site-nav__item">
-                            <a href="./404.html" class="site-nav__link_red"> Акции </a>
-                        </div>
-                        <span></span>
-                        <div class="site-nav__item">
-                            <a href="./catalog-main.html" class="site-nav__link">Каталог</a>
-                        </div>
-                        <span></span>
-                        <div class="site-nav__item">
-                            <a href="./directions-page.html" class="site-nav__link">Направления</a>
-                        </div>
-                        <span></span>
-                        <div class="site-nav__item">
-                            <a href="./404.html" class="site-nav__link">Бренды</a>
-                        </div>
-                        <span></span>
-                        <div class="site-nav__item">
-                            <a href="./404.html" class="site-nav__link">О компании</a>
-                        </div>
-                        <span></span>
-                        <div class="site-nav__item">
-                            <a href="./404.html" class="site-nav__link">Контакты</a>
-                        </div>
-                    </div>
-                </nav>
+      
+              <nav class="header__nav">
+                <button type="button" class="burger nav__burger">
+                  <span></span>
+                </button>
+                <div class="site-nav">
+                  <img src="./common/svg/sale.svg" alt="sale" class="site-nav__icon-sale" />
+                  <div class="site-nav__item">
+                    <a href="./404.html" class="site-nav__link_red"> Акции </a>
+                  </div>
+                  <span></span>
+                  <div class="site-nav__item">
+                    <a href="./catalog-main.html" class="site-nav__link">Каталог</a>
+                  </div>
+                  <span></span>
+                  <div class="site-nav__item">
+                    <a href="./directions-page.html" class="site-nav__link">Направления</a>
+                  </div>
+                  <span></span>
+                  <div class="site-nav__item">
+                    <a href="./brands-all.html" class="site-nav__link">Бренды</a>
+                  </div>
+                  <span></span>
+                  <div class="site-nav__item">
+                    <a href="./about.html" class="site-nav__link">О компании</a>
+                  </div>
+                  <span></span>
+                  <div class="site-nav__item">
+                    <a href="./contacts.html" class="site-nav__link">Контакты</a>
+                  </div>
+                </div>
+              </nav>
             </div>
-        </header>
+          </header>
         <main class="catalog">
             <div class="container-main">
                 <div class="catalog__nav">
