add: link brand inside

--- a/brands-all.html
+++ b/brands-all.html
@@ -333,42 +333,42 @@
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                     <div class="brands-all__item">
                       <div class="brands-all__logo-block">
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                     <div class="brands-all__item">
                       <div class="brands-all__logo-block">
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                     <div class="brands-all__item">
                       <div class="brands-all__logo-block">
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                     <div class="brands-all__item">
                       <div class="brands-all__logo-block">
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                     <div class="brands-all__item">
                       <div class="brands-all__logo-block">
                         <img class="brands-all__logo" src="./common/images/brand.png" width="215" height="115" alt="">
                       </div>
                         <div class="brands-all__country">Страна</div>
-                        <div class="brands-all__name"><a href="">Название очередного бренда</a></div>
+                        <div class="brands-all__name"><a href="./brand-inside.html">Название очередного бренда</a></div>
                     </div>
                 </div>
 
