resolve rebase commit

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               </a>
             </button>
             <button type="button" class="icon-btn header__map-btn">
-              <a href="./404.html">
+              <a href="./registration.html">
                 <img src="./common/svg/Location.svg" alt="">
               </a>
             </button>
