refactor:add links brand page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a class="" href="#">Направления</a>
               </div>
               <div class="nav-modal__main-nav-2">
-                <a class="" href="#">Бренды</a>
+                <a class="" href="./brands-all.html">Бренды</a>
                 <a class="" href="./about.html">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
@@ -810,7 +810,7 @@
               <a class="footer__link" href="#">Направления</a>
             </div>
             <div class="footer__menu-wrap-right">
-              <a class="footer__link" href="#">Бренды</a>
+              <a class="footer__link" href="./brands-all.html">Бренды</a>
               <a class="footer__link" href="./about.html">О компании</a>
               <a class="footer__link" href="./contacts">Контакты</a>
             </div>
