refactor:fixed indents in the registration and shopping cart component

--- a/user-account.html
+++ b/user-account.html
@@ -333,7 +333,7 @@
                                 <div class="account__tab-content"></div>
                             </div>
                         </div>
-                        <button class="main-btn account__singup-btn">
+                        <button type="button" class=" account__singup-btn">
                             <i id="icon" class="account__signup-icon" stroke="#000" data-feather="log-out"></i>
                             <span>ВЫХОД</span>
                         </button>
@@ -685,23 +685,27 @@
                             </button>
                         </div>
                         <div class="history-diteal__header--description">
-                            <ul class='history-diteal__list'>
-                                <li>Дата заказа:
+                            <div class='history-diteal__list-header'>
+                                <p>Дата заказа:</p>
                                     <span>24.02.2022</span>
-                                </li>
-                                <li>Персональные данные:
+                           </div>
+                           <div class='history-diteal__list-header'>
+                                <p>Персональные данные:</p>
                                     <span>Андрей Гайдулян</span>
-                                </li>
-                                <li>Доставка:
+                               </div>
+                               <div class='history-diteal__list-header'>
+                                <p>Доставка:</p>
                                     <span>Курьером</span>
-                                </li>
-                                <li>Способ оплаты:
+                               </div>
+                               <div class='history-diteal__list-header'>
+                                <p>Способ оплаты:</p>
                                     <span>Оплата картой</span>
-                                </li>
-                                <li>Статус:
+                               </div>
+                               <div class='history-diteal__list-header'>
+                                <p>Статус:</p>
                                     <span>Передан в отдел доставки</span>
-                                </li>
-                            </ul>
+                                </div>
+                           
                         </div>
                     </div>
                     <div class="history-diteal__tables">
@@ -760,22 +764,23 @@
                     </div>
                     <div class="history-diteal__footer">
                         <div class="history-diteal__footer--content">
-                            <ul class='history-diteal__list'>
-                                <li>Стоимость товаров:
+                            <div class='history-diteal__list'>
+                                <span>Стоимость товаров:</span>
                                     <span> 11 600 &#8381</span>
-                                </li>
-                                <li>Скидка:
+                                </div>
+                                <div class='history-diteal__list'>
+                                <span>Скидка:</span>
                                     <span style="color:red;">1 100 &#8381</span>
-                                </li>
-                                <li>Стоимость доставки:
+                             </div>
+                             <div class='history-diteal__list'>
+                                <span>Стоимость доставки:</span>
                                     <span>-</span>
-                                </li>
-                            </ul>
-                            <ul class='history-diteal__list cost'>
-                                <li>Общая стоимость:
-                                    <span>11 600 &#8381</span>
-                                </li>
-                            </ul>
+                                </div>
+                           
+                            <div class='history-diteal__list cost'>
+                                <span>Общая стоимость: </span>  
+                                <span>11 600 &#8381</span>
+                            </div>
                             <button type="button" class="main-btn">
                                 <span>Повторить заказ</span>
                             </button>
