fix: navigation and title

--- a/brand-inside.html
+++ b/brand-inside.html
@@ -415,14 +415,14 @@
             </a>
             <a href="./index.html" class="card__nav-link">Главная </a>
             <span class="card__nav-slach">/</span>
-            <a href="" class="card__nav-link">Каталог</a>
+            <a href="" class="card__nav-link">Бренды</a>
             <span class="card__nav-slach">/</span>
-            <a href="" class="card__nav-link">Маммология</a>
+            <a href="" class="card__nav-link">Natural Pharmacy</a>
           </nav>
         </div>
         <div class="catalog__header">
           <h2 class="catalog__title-main">
-            Bard
+            Natural Pharmacy
           </h2>
           <div class="catalog__line"></div>
           <div class="catalog__brand-wrapper">
