fix: link stock

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="nav-modal__main">
             <div class="nav-modal__main-nav">
               <div class="nav-modal__main-nav-1">
-                <a class="" href="#">Акции</a>
+                <a class="" href="./stock.html">Акции</a>
                 <a class="" href="./catalog-main.html">Каталог</a>
               </div>
               <div class="nav-modal__main-nav-2">
@@ -123,7 +123,7 @@
             </div>
             <div class="nav-modal__main-nav nav-modal__main-mobile-nav">
               <div class="nav-modal__main-nav-1">
-                <a class="" href="#">Акции</a>
+                <a class="" href="./stock.html">Акции</a>
                 <a class="" href="./catalog-main.html">Каталог</a>
                 <a class="" href="#">Направления</a>
               </div>
@@ -278,7 +278,7 @@
           <div class="site-nav">
             <img src="./common/svg/sale.svg" alt="sale" class="site-nav__icon-sale" />
             <div class="site-nav__item">
-              <a href="./404.html" class="site-nav__link_red"> Акции </a>
+              <a href="./stock.html" class="site-nav__link_red"> Акции </a>
             </div>
             <span></span>
             <div class="site-nav__item">
@@ -805,7 +805,7 @@
         <div class="footer__top">
           <div class="footer__left-menu">
             <div class="footer__menu-wrap-left">
-              <a class="footer__link" href="#">Акции</a>
+              <a class="footer__link" href="./stock.html">Акции</a>
               <a class="footer__link" href="./catalog-main.html">Каталог</a>
               <a class="footer__link" href="#">Направления</a>
             </div>
