--- a/user-account.html
+++ b/user-account.html
@@ -582,7 +582,7 @@
                                     <span>Сохранить адрес</span>
                                 </button>
                                 <button type="reset" class="main-btn account__delivery-new-address-cancel">
-                                    <span>Отмненить</span>
+                                    <span>Отменить</span>
                                 </button>
                             </div>
                         </div>
@@ -687,25 +687,25 @@
                         <div class="history-diteal__header--description">
                             <div class='history-diteal__list-header'>
                                 <p>Дата заказа:</p>
-                                    <span>24.02.2022</span>
-                           </div>
-                           <div class='history-diteal__list-header'>
+                                <span>24.02.2022</span>
+                            </div>
+                            <div class='history-diteal__list-header'>
                                 <p>Персональные данные:</p>
-                                    <span>Андрей Гайдулян</span>
-                               </div>
-                               <div class='history-diteal__list-header'>
+                                <span>Андрей Гайдулян</span>
+                            </div>
+                            <div class='history-diteal__list-header'>
                                 <p>Доставка:</p>
-                                    <span>Курьером</span>
-                               </div>
-                               <div class='history-diteal__list-header'>
+                                <span>Курьером</span>
+                            </div>
+                            <div class='history-diteal__list-header'>
                                 <p>Способ оплаты:</p>
-                                    <span>Оплата картой</span>
-                               </div>
-                               <div class='history-diteal__list-header'>
+                                <span>Оплата картой</span>
+                            </div>
+                            <div class='history-diteal__list-header'>
                                 <p>Статус:</p>
-                                    <span>Передан в отдел доставки</span>
-                                </div>
-                           
+                                <span>Передан в отдел доставки</span>
+                            </div>
+
                         </div>
                     </div>
                     <div class="history-diteal__tables">
@@ -763,28 +763,30 @@
                         </table>
                     </div>
                     <div class="history-diteal__footer">
-                        <div class="history-diteal__footer--content">
-                            <div class='history-diteal__list'>
-                                <span>Стоимость товаров:</span>
-                                    <span> 11 600 &#8381</span>
+                        <div class="history-diteal__footer-content-block">
+                            <div class='shoping-cart__list'>
+                                <div>
+                                    <p>Стоимость товаров: </p>
+                                    <p>Скидка:</p>
+                                    <p>Стоимость доставки:</p>
                                 </div>
-                                <div class='history-diteal__list'>
-                                <span>Скидка:</span>
-                                    <span style="color:red;">1 100 &#8381</span>
-                             </div>
-                             <div class='history-diteal__list'>
-                                <span>Стоимость доставки:</span>
-                                    <span>-</span>
+
+                                <div>
+                                    <p> 11 600 &#8381</p>
+                                    <p style="color:red;">1 100 &#8381</p>
+                                    <p>-</p>
                                 </div>
-                           
-                            <div class='history-diteal__list cost'>
-                                <span>Общая стоимость: </span>  
-                                <span>11 600 &#8381</span>
                             </div>
-                            <button type="button" class="main-btn">
-                                <span>Повторить заказ</span>
-                            </button>
+                            <div class=' shoping-cart__cost'>
+                                <p>Общая стоимость:
+                                </p>
+                                <p>11 600 &#8381</p>
+                            </div>
                         </div>
+                        <button type="button" class="main-btn shoping-cart__checkout-btn">
+                            <span>Повторить заказ</span>
+                        </button>
+
                     </div>
                 </div>
 
