--- a/catalog-main.html
+++ b/catalog-main.html
@@ -290,8 +290,8 @@
                 </address>
                 <div class="header__icons-buttons">
                   <button type="button" class="icon-btn header__seacrh-btn">
-                    <a href="./404.html">
-                      <img src="./common/svg/Search.svg" alt="">
+                    <a href="./search-page.html">
+                        <img src="./common/svg/Search.svg" alt="">
                     </a>
                   </button>
                   <button type="button" class="icon-btn header__map-btn">
