add: class user-btn

--- a/card-products.html
+++ b/card-products.html
@@ -301,7 +301,7 @@
                 <img src="./common/svg/Heart.svg" alt="">
               </a>
             </button>
-            <button type="button" class="icon-btn">
+            <button type="button" class="icon-btn header__user-btn">
               <a href="./user-account.html">
                 <img src="./common/svg/User.svg" alt="">
               </a>
