add: modal window order point

--- a/order.html
+++ b/order.html
@@ -258,6 +258,69 @@
         </p>
       </div>
     </div>
+    <div class="order-point">
+        <button class="order-point__btn-close">&#9587;</button>
+        <h1 class="order-point__title">Выбрать пункт заказа</h1>
+        <div class="order-point__container">
+            <ul class="order-point__list">
+                <li class="order-point__item">
+                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+                        г. Марфино, Зеленая, 2а5</span>
+                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
+                    <p class="order-point__time">
+                        <span class="order-point__text order__text--bold">Режим работы</span>
+                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
+                    </p>
+                    <div class="order-point__btn-block">
+                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+                        <button class="order-point__btn-show-hide">Подробнее</button>
+                    </div>
+                </li>
+                <li class="order-point__item">
+                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+                        г. Марфино, Зеленая, 2а5</span>
+                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
+                    <p class="order-point__time">
+                        <span class="order-point__text order__text--bold">Режим работы</span>
+                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
+                    </p>
+                    <div class="order-point__btn-block">
+                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+                        <button class="order-point__btn-show-hide">Подробнее</button>
+                    </div>
+                </li>
+                <li class="order-point__item">
+                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+                        г. Марфино, Зеленая, 2а5</span>
+                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
+                    <p class="order-point__time">
+                        <span class="order-point__text order__text--bold">Режим работы</span>
+                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
+                    </p>
+                    <div class="order-point__btn-block">
+                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+                        <button class="order-point__btn-show-hide">Подробнее</button>
+                    </div>
+                </li>
+                <li class="order-point__item">
+                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+                        г. Марфино, Зеленая, 2а5</span>
+                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
+                    <p class="order-point__time">
+                        <span class="order-point__text order__text--bold">Режим работы</span>
+                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
+                    </p>
+                    <div class="order-point__btn-block">
+                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+                        <button class="order-point__btn-show-hide">Подробнее</button>
+                    </div>
+                </li>
+            </ul>
+            <div class="order-point__map">
+                <img src="./common/images/Карта.png" alt="">
+            </div>
+        </div>
+    </div>
   </div>
   <div class="wrapper">
     <header class="header">
@@ -488,7 +551,7 @@
   </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
-  <script type="module" src="./scripts/reviews-all.js"></script>
+  <!-- <script type="module" src="./scripts/reviews-all.js"></script> -->
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <script type="module" src="./scripts/index.js"></script>
 </body>
