feat:added the checkout page

--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -428,10 +428,11 @@
                                 <p>11 600 &#8381</p>
                             </div>
                         </div>
-                        <button type="button" class="main-btn shoping-cart__checkout-btn">
-                            <span>Оформить заказ</span>
-                        </button>
-
+                        <a href="./checkout.html">
+                            <button type="button" class="main-btn shoping-cart__checkout-btn">
+                                <span>Оформить заказ</span>
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
